# alea

./: README.rst  pyproject.toml
Alea.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
alea/: aleainput.py  auxdate.py  extractCSV.py  getfile.py  getusernumbers.py  main.py  mydate.py  mydateerror.py
